[gd_scene load_steps=3 format=3 uid="uid://0p26cuq3mpnf"]

[ext_resource type="Script" uid="uid://cclckr5svh5ee" path="res://Objects/WorkshopPopup/workshop_popup.gd" id="1_8u1yu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mi701"]
size = Vector2(706, 181)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_8u1yu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_mi701")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -396.0
offset_top = -98.0
offset_right = 393.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 90
text = "Enter workshop"

[node name="Label" type="Label" parent="."]
offset_left = -352.0
offset_top = -91.0
offset_right = 354.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 90
text = "Workshop"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
